# WSOMailer

./: pyproject.toml
wsomailer/: __init__.py
