[tool.poetry]
name = "wsomailer"
version = "0.1.2"
description = "WebShellOrb Mailer"
authors = ["Sergey M <yamldeveloper@proton.me>"]
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/s3rgeym/WSOMailer"
exclude = [".git"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
wsomailer = "wsomailer:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
